fix: add some conditionals and fix a spacing issue

--- a/packages/gatsby-theme-basic/src/components/modularity-modules/ContactCard.module.css
+++ b/packages/gatsby-theme-basic/src/components/modularity-modules/ContactCard.module.css
@@ -18,6 +18,7 @@
 .wrapper {
   display: flex;
   flex-direction: column;
+  margin-top: var(--module-contact-group-spacing);
   gap: var(--module-contact-group-spacing);
 }
 
@@ -42,6 +43,9 @@
   display: block;
   margin-bottom: var(--module-contact-label-spacing);
   font-weight: var(--module-contact-label-weight);
+}
+
+.name {
 }
 
 .photo {
